--- a/WildFire/personality.properties
+++ b/WildFire/personality.properties
@@ -1,5 +1,5 @@
 #Thu Aug 16 11:58:23 CEST 2018
 name=WildFire
-updateDownloadZipLink=null
-personalityPropertiesLink=null
-version=1.0.0
+updateDownloadZipLink=https\://github.com/genome231/WildFire/archive/master.zip
+personalityPropertiesLink=https\://raw.githubusercontent.com/genome231/WildFire/master/personality.properties
+version=0.0.1
